--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ lxml
 wget
 gtts
 beautifulsoup4
-requests
-python-telegram-bot==13.10
-sqlalchemy==1.3.23
+requests==2.20.0
+telegram==0.0.1
+python-telegram-bot==13.7
+sqlalchemy==1.3.20
 psycopg2-binary
 feedparser
 faker
@@ -20,19 +21,19 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp
+aiohttp>=2.2.5
 Pillow
 CurrencyConverter
 googletrans==4.0.0-rc1
 google-trans-new==1.1.9
 jikanpy
 speedtest-cli
-coffeehouse
+coffeehouse==2.2.6
 regex
 bleach
 wikipedia
-markdown2
-telethon
+markdown2>=2.4.0
+telethon==1.22.0
 telegraph
 heroku3
 spamwatch
@@ -45,10 +46,14 @@ pygithub
 TgCrypto
 Pyrogram
 PyDictionary
+yt-dlp
+youtube_search_python==1.4.9
+youtube_search
+lyrics_extractor
 asyncio
 cloudscraper
-dateparser
-pymongo
+dateparser==1.1.0
+pymongo==3.12.1
 dnspython
 secureme
 apscheduler
@@ -56,6 +61,7 @@ emoji-country-flag
 countryinfo
 html2text
 bs4
+redis
 pySmartDL
 bing_image_downloader
 search_engine_parser
@@ -67,22 +73,15 @@ envparse
 #profanity (Credits to Julia)
 better_profanity
 textblob 
+nudepy
 nekos.py
 motor
 gpytranslate
 fontTools
 opencv-python-headless
 odmantic
-tzlocal
+tzlocal==4.1
 pendulum
 fuzzysearch
 img2pdf
 multicolorcaptcha
-gitpython
-cloudmersive_virus_api_client
-chromedriver
-hurry.filesize
-PyYAML
-humanize
-python-rapidjson
-covid
