--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,9 @@ lxml
 wget
 gtts
 beautifulsoup4
-requests==2.20.0
-telegram==0.0.1
-python-telegram-bot==13.7
-sqlalchemy==1.3.20
+requests
+python-telegram-bot==13.10
+sqlalchemy==1.3.23
 psycopg2-binary
 feedparser
 faker
@@ -21,19 +20,19 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp>=2.2.5
+aiohttp
 Pillow
 CurrencyConverter
 googletrans==4.0.0-rc1
 google-trans-new==1.1.9
 jikanpy
 speedtest-cli
-coffeehouse==2.2.6
+coffeehouse
 regex
 bleach
 wikipedia
-markdown2>=2.4.0
-telethon==1.22.0
+markdown2
+telethon
 telegraph
 heroku3
 spamwatch
@@ -44,16 +43,12 @@ ujson
 pretty_errors
 pygithub
 TgCrypto
-Pyrogram
+pyrogram==1.4.15
 PyDictionary
-yt-dlp
-youtube_search_python==1.4.9
-youtube_search
-lyrics_extractor
 asyncio
 cloudscraper
-dateparser==1.1.0
-pymongo==3.12.1
+dateparser
+pymongo
 dnspython
 secureme
 apscheduler
@@ -61,7 +56,6 @@ emoji-country-flag
 countryinfo
 html2text
 bs4
-redis
 pySmartDL
 bing_image_downloader
 search_engine_parser
@@ -80,8 +74,16 @@ gpytranslate
 fontTools
 opencv-python-headless
 odmantic
-tzlocal==4.1
+tzlocal
 pendulum
 fuzzysearch
 img2pdf
 multicolorcaptcha
+gitpython
+cloudmersive_virus_api_client
+chromedriver
+hurry.filesize
+PyYAML
+humanize
+python-rapidjson
+covid
